PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add the *pel-show-paren-info* command, bound to ~<f11> h ? (~.  It prints
  the value of all user-option variables that control the *paren-mode*
  behaviour inside the =*pel-highlight-info*= buffer.  The name of each
  variable is also a button that leads to its help.
- Add commands to split the root window in all 4 directions, available in all versions of
  Emacs supported by PEL, not only 29.1:
  - *pel-split-root-window-above*, bound to ~<f11> w r 8~ and to PEL Window Hydra ~C-M-8~
  - *pel-split-root-window-below*, bound to ~<f11> w r 2~ and to PEL Window Hydra ~C-M-2~
  - *pel-split-root-window-right*, bound to ~<f11> w r 6~ and to PEL Window Hydra ~C-M-6~
  - *pel-split-root-window-left*,  bound to ~<f11> w r 4~ and to PEL Window Hydra ~C-M-4~
- Add binding ~f~ to *follow-mode* in the PEL Window Hydra.
- Add binding ~<f11> w s .~ *fit-window-to-buffer* matching its ~.~ binding in PEL Window Hydra.
- Add binding ~<f11> w s -~ *shrink-window-if-larger-than-buffer* matching its ~-~ binding
  in PEL Window Hydra.
- Add *pel-toggle-size-fixed*, bound to ~<f11> w s s~ and inside the PEL Window Hydra as
  *s*.  By default the command imposes a soft size restriction (allowing Emacs to change a
  window's height to display the min-buffer, for example).  With a prefix argument the
  command imposes a strict size constraint (which prevents Emacs from modifying the window
  size under all cases).
- Add *pel-toggle-switch-to-buffer-obey-display-actions*, bound to ~<f11> w <f4> b~ to
  toggle behaviour of switch buffer commands: either respecting or not respecting display
  actions.  Available for Emacs 29.1 or later only.  Use it to learn the impact of the new
  *switch-to-buffer-obey-display-actions* user-option.
- Simplified bindings for *pel-toggle-window-dedicated*, changed from ~<f11> w d d~ to
  ~<f11> w d~.